--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,18 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>presta-test</title>
   </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but presta-test doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+  <!-- style du body a deplacer -->
+  <body style="margin: 0; padding:0;">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <style>
+    body{
+      background-color: #FAFAFA;
+    }
+  </style>
 </html>
